fix: remove wrapper, adjust sidebar and topbar fix css overlap

--- a/src/styles/Tracker.css
+++ b/src/styles/Tracker.css
@@ -133,19 +133,16 @@ table {
     Sy
 */
 
-html {
-  font-size: 20px;
-  background-color: beige;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
 .encountertracker {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 20px;
+  background-color: beige;
+}
+
+.encountertracker h2 {
+  font-size: 2rem;
 }
 
 .playerList {
@@ -167,7 +164,7 @@ h2 {
   height: 20vh;
 }
 
-.sidebar {
+.tracker-sidebar {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
